Tue May 04 19:38:31 GMT 2010  Richard Boulton <richard@tartarus.org>

	* api/replication.cc,bin/xapian-replicate.cc,
	  common/replicatetcpclient.h,common/replication.h,
	  net/replicatetcpclient.cc,tests/api_replicate.cc: Fix a bug in
	  replication, which triggered when multiple modifications were
	  made to a database while a full copy of the database was in
	  progress.  In this situation, the client would fail to apply more
	  than one changeset before trying (and failing) to make the
	  database live, due to an incorrect assignment of the new revision
	  number to "offline_needed_revision" instead of
	  "offline_revision".  Also, replication now only sleeps for a
	  period (to allow reader to catch up) after a changeset has been
	  applied to a live database - previously, it would sleep
	  unnecessarily after a changeset had been applied to an offline
	  database.  Also, make the period for which replication sleeps in
	  this situation configurable with the "-r" command line option to
	  xapian-replicate.
	  A test for these changes will be committed to xapian-bindings
	  shortly.

Sat May 01 15:25:48 GMT 2010  Olly Betts <olly@survex.com>

	* Merge change accidentally committed to brass-btree branch:
	* tests/perftest/runprocess.cc: Use safesyswait.h, fixing build failure
	  on "make check" on FreeBSD.

Fri Apr 30 12:33:25 GMT 2010  Richard Boulton <richard@tartarus.org>

	* backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_databasereplicator.cc,
	  backends/flint/flint_databasereplicator.cc,tests/api_replicate.cc:
	  If a DB file doesn't exist when applying a changeset, try
	  creating it - this happens with lazy tables which aren't created
	  in the initial revision copied.  Add replicate4 test to check
	  that this works correctly with a lazily created position table.
	  Fixes ticket #468.

Fri Apr 30 07:09:31 GMT 2010  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Replication and PostingSource aren't
	  experimental in 1.2.x.
